rt/test/errors/019/test.volt
//T macro:expect-failure
//T check:expected a composable
module test;

fn main() i32
{
    a := new "hello";
    return 0;
}
